[package]
name = "custom_float"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Custom floating-point types"
repository = "https://github.com/sigurd4/custom_float"
keywords = ["float", "number", "custom", "ieee754"]
categories = ["algorithms", "compression", "embedded", "encoding", "mathematics", "no-std::no-alloc", "science"]
exclude = ["plots"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []#["use_std_float"]
use_std_float = []

[dependencies]
moddef = "0.2.6"
num-traits = "0.2.19"

[dev-dependencies]
num = "0.4.3"
plotters = "0.3.7"
linspace = "0.1.1"
libm = "0.2.15"
